some tags was changed

--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -18,8 +18,8 @@
       </nav>
     </header>
     <main class="main-content">
-      <section class="lifestyle-block" id="lifestyle_link">
-        <div class="block-1">
+      <div class="lifestyle-block" id="lifestyle_link">
+        <section class="block-1">
           <img
             src="img/image1.jpg"
             alt="dancing_woman"
@@ -46,8 +46,8 @@
             quia non numquam eius modi tempora incidunt ut labore et dolore
             magnam aliquam quaerat voluptatem.
           </p>
-        </div>
-        <div class="block-2">
+        </section>
+        <section class="block-2">
           <img
             src="img/image2.jpg"
             alt="cup_of_coffee"
@@ -74,10 +74,10 @@
             quia non numquam eius modi tempora incidunt ut labore et dolore
             magnam aliquam quaerat voluptatem.
           </p>
-        </div>
-      </section>
-      <section class="photodiary-block" id="photodiary_link">
-        <div class="block-1">
+        </section>
+      </div>
+      <div class="photodiary-block" id="photodiary_link">
+        <section class="block-1">
           <img
             src="img/image3.jpg"
             alt="victory_emojie"
@@ -104,8 +104,8 @@
             quia non numquam eius modi tempora incidunt ut labore et dolore
             magnam aliquam quaerat voluptatem.
           </p>
-        </div>
-        <div class="block-2">
+        </section>
+        <section class="block-2">
           <img
             src="img/image4.jpg"
             alt="man_looking_forward"
@@ -132,9 +132,11 @@
             quia non numquam eius modi tempora incidunt ut labore et dolore
             magnam aliquam quaerat voluptatem.
           </p>
-        </div>
-      </section>
-      <button>load more</button>
+        </section>
+      </div>
+      <div class="button-more">
+        <button>load more</button>
+      </div>
     </main>
   </body>
 </html>
