--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -7,7 +7,7 @@
     <title>homework-01</title>
   </head>
   <body>
-    <header class="main-header">
+    <header>
       <nav>
         <ul>
           <li><a href="#lifestyle_link">lifestyle</a></li>
@@ -17,16 +17,16 @@
         </ul>
       </nav>
     </header>
-    <main class="main-content">
-      <div class="lifestyle-block" id="lifestyle_link">
-        <section class="block-1">
+    <main>
+      <div id="lifestyle_link">
+        <article>
           <img
             src="img/image1.jpg"
             alt="dancing_woman"
             width="420"
             height="280"
           />
-          <p>lifestyle</p>
+          <h3>lifestyle</h3>
           <h2>More than just a music festaval</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -46,15 +46,15 @@
             quia non numquam eius modi tempora incidunt ut labore et dolore
             magnam aliquam quaerat voluptatem.
           </p>
-        </section>
-        <section class="block-2">
+        </article>
+        <article>
           <img
             src="img/image2.jpg"
             alt="cup_of_coffee"
             width="420"
             height="280"
           />
-          <p>lifestyle</p>
+          <h3>lifestyle</h3>
           <h2>Life tastes better with coffee</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -74,17 +74,17 @@
             quia non numquam eius modi tempora incidunt ut labore et dolore
             magnam aliquam quaerat voluptatem.
           </p>
-        </section>
+        </article>
       </div>
-      <div class="photodiary-block" id="photodiary_link">
-        <section class="block-1">
+      <div id="photodiary_link">
+        <article>
           <img
             src="img/image3.jpg"
             alt="victory_emojie"
             width="420"
             height="280"
           />
-          <p>photodiary</p>
+          <h3>photodiary</h3>
           <h2>American dream</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -104,15 +104,15 @@
             quia non numquam eius modi tempora incidunt ut labore et dolore
             magnam aliquam quaerat voluptatem.
           </p>
-        </section>
-        <section class="block-2">
+        </article>
+        <article>
           <img
             src="img/image4.jpg"
             alt="man_looking_forward"
             width="420"
             height="280"
           />
-          <p>photodiary</p>
+          <h3>photodiary</h3>
           <h2>A day exploring the Alps</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -132,11 +132,9 @@
             quia non numquam eius modi tempora incidunt ut labore et dolore
             magnam aliquam quaerat voluptatem.
           </p>
-        </section>
+        </article>
       </div>
-      <div class="button-more">
-        <button>load more</button>
-      </div>
+      <button>load more</button>
     </main>
   </body>
 </html>
