--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -26,7 +26,7 @@
             width="420"
             height="280"
           />
-          <h3>lifestyle</h3>
+          <p>lifestyle</p>
           <h2>More than just a music festaval</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -54,7 +54,7 @@
             width="420"
             height="280"
           />
-          <h3>lifestyle</h3>
+          <p>lifestyle</p>
           <h2>Life tastes better with coffee</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -84,7 +84,7 @@
             width="420"
             height="280"
           />
-          <h3>photodiary</h3>
+          <p>photodiary</p>
           <h2>American dream</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -112,7 +112,7 @@
             width="420"
             height="280"
           />
-          <h3>photodiary</h3>
+          <p>photodiary</p>
           <h2>A day exploring the Alps</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
