--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -115,7 +115,7 @@
           </li>
         </ul>
         <div class="button">
-          <a href="#" class="btn">Load more</a>
+          <button type="button" class="btn">Load more</button>
         </div>
       </div>
     </main>
