specified comments fixed

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -1,123 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Ivan Fesenko" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Playfair+Display|Ubuntu:300&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" />
 
-    <title>homework-03</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <nav>
-          <ul class="menu">
-            <li class="menu-item"><a class="link" href="#">lifestyle</a></li>
-            <li class="menu-item"><a class="link" href="#">photodiary</a></li>
-            <li class="menu-item"><a class="link" href="#">music</a></li>
-            <li class="menu-item"><a class="link" href="#">travel</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main>
-      <div class="container">
-        <ul class="article-list">
-          <li class="article-list-item first-row">
-            <img
-              src="img/image1.jpg"
-              alt="dancing_woman"
-              width="420"
-              height="280"
-            />
-            <p class="section">lifestyle</p>
-            <h2 class="title">More than just a music festaval</h2>
-            <p class="text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            </p>
-          </li>
-          <li class="article-list-item second-row">
-            <img
-              src="img/image2.jpg"
-              alt="cup_of_coffee"
-              width="420"
-              height="280"
-            />
-            <p class="section">lifestyle</p>
-            <h2 class="title">Life tastes better with coffee</h2>
-            <p class="text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            </p>
-          </li>
-          <li class="article-list-item first-row">
-            <img
-              src="img/image3.jpg"
-              alt="victory_emojie"
-              width="420"
-              height="280"
-            />
-            <p class="section">photodiary</p>
-            <h2 class="title">American dream</h2>
-            <p class="text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            </p>
-          </li>
-          <li class="article-list-item second-row">
-            <img
-              src="img/image4.jpg"
-              alt="man_looking_forward"
-              width="420"
-              height="280"
-            />
-            <p class="section">photodiary</p>
-            <h2 class="title">A day exploring the Alps</h2>
-            <p class="text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            </p>
-          </li>
-          <li class="article-list-item first-row">
-            <img
-              src="img/image5.jpg"
-              alt="woman_with_hat"
-              width="420"
-              height="280"
-            />
-            <p class="section">lifestyle</p>
-            <h2 class="title">Top 10 song for running</h2>
-            <p class="text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            </p>
-          </li>
-          <li class="article-list-item second-row">
-            <img src="img/image6.jpg" alt="snowroad" width="420" height="280" />
-            <p class="section">lifestyle</p>
-            <h2 class="title">Cold winter days</h2>
-            <p class="text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            </p>
-          </li>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Ivan Fesenko" />
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Ubuntu:300&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
+
+  <title>homework-03</title>
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <nav>
+        <ul class="menu">
+          <li class="menu-item"><a class="link" href="#">lifestyle</a></li>
+          <li class="menu-item"><a class="link" href="#">photodiary</a></li>
+          <li class="menu-item"><a class="link" href="#">music</a></li>
+          <li class="menu-item"><a class="link" href="#">travel</a></li>
         </ul>
-        <div class="button">
-          <button type="button" class="btn">Load more</button>
-        </div>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <div class="container">
+      <ul class="article-list">
+        <li class="article-list-item">
+          <img src="img/image1.jpg" alt="dancing_woman" width="420" height="280" />
+          <p class="section">lifestyle</p>
+          <h2 class="title">More than just a music festaval</h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris
+          </p>
+        </li>
+        <li class="article-list-item">
+          <img src="img/image2.jpg" alt="cup_of_coffee" width="420" height="280" />
+          <p class="section">lifestyle</p>
+          <h2 class="title">Life tastes better with coffee</h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris
+          </p>
+        </li>
+        <li class="article-list-item">
+          <img src="img/image3.jpg" alt="victory_emojie" width="420" height="280" />
+          <p class="section">photodiary</p>
+          <h2 class="title">American dream</h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris
+          </p>
+        </li>
+        <li class="article-list-item">
+          <img src="img/image4.jpg" alt="man_looking_forward" width="420" height="280" />
+          <p class="section">photodiary</p>
+          <h2 class="title">A day exploring the Alps</h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris
+          </p>
+        </li>
+        <li class="article-list-item">
+          <img src="img/image5.jpg" alt="woman_with_hat" width="420" height="280" />
+          <p class="section">lifestyle</p>
+          <h2 class="title">Top 10 song for running</h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris
+          </p>
+        </li>
+        <li class="article-list-item">
+          <img src="img/image6.jpg" alt="snowroad" width="420" height="280" />
+          <p class="section">lifestyle</p>
+          <h2 class="title">Cold winter days</h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris
+          </p>
+        </li>
+      </ul>
+      <div class="button">
+        <button type="button" class="btn">Load more</button>
       </div>
-    </main>
-  </body>
+    </div>
+  </main>
+</body>
+
 </html>
