module-04 changed with specification

--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <header class="header clearfix">
         <div class="logo">
-          <img src="./img/logo.png" alt="mart_logo" width="78" height="21" />
+          <h1 class="title"><span class="first-letter">m</span>art</h1>
         </div>
         <nav class="menu">
           <ul class="main-menu">
@@ -37,98 +37,122 @@
           <h2 class="section-title">feature products</h2>
           <ul class="product-list clearfix">
             <li class="product-list-item">
-              <img
-                src="./img/product1.png"
-                alt="shoe"
-                width="255"
-                height="280"
-              />
+              <a href="#" class="img-link"
+                ><img
+                  src="./img/product1.png"
+                  alt="shoe"
+                  width="255"
+                  height="280"
+              /></a>
               <div class="name-price clearfix">
-                <span class="name">blue tshirt</span>
+                <a href="#" class="name"><h3 class="title">blue tshirt</h3></a>
+
                 <span class="price">$26</span>
               </div>
             </li>
             <li class="product-list-item">
-              <img
-                src="./img/product2.png"
-                alt="belt"
-                width="255"
-                height="280"
-              />
+              <a href="#" class="img-link"
+                ><img
+                  src="./img/product2.png"
+                  alt="belt"
+                  width="255"
+                  height="280"
+              /></a>
               <div class="name-price clearfix">
-                <span class="name">woman shrit</span>
+                <a href="#" class="name"><h3 class="title">woman shrit</h3></a>
+
                 <span class="price">$31</span>
               </div>
             </li>
             <li class="product-list-item">
-              <img
-                src="./img/product9.png"
-                alt="hat"
-                width="255"
-                height="280"
-              />
+              <a href="#" class="img-link"
+                ><img
+                  src="./img/product9.png"
+                  alt="hat"
+                  width="255"
+                  height="280"
+              /></a>
               <div class="name-price clearfix">
-                <span class="name">yellow tshirt</span>
+                <a href="#" class="name"
+                  ><h3 class="title">yellow tshirt</h3></a
+                >
+
                 <span class="price">$21</span>
               </div>
             </li>
             <li class="product-list-item">
-              <img
-                src="./img/product4.png"
-                alt="bag"
-                width="255"
-                height="280"
-              />
+              <a href="#" class="img-link"
+                ><img
+                  src="./img/product4.png"
+                  alt="bag"
+                  width="255"
+                  height="280"
+              /></a>
               <div class="name-price clearfix">
-                <span class="name">cool lingerie</span>
+                <a href="#" class="name"
+                  ><h3 class="title">cool lingerie</h3></a
+                >
+
                 <span class="price">$56</span>
               </div>
             </li>
             <li class="product-list-item">
-              <img
-                src="./img/product3.png"
-                alt="bag"
-                width="255"
-                height="280"
-              />
+              <a href="#" class="img-link"
+                ><img
+                  src="./img/product3.png"
+                  alt="bag"
+                  width="255"
+                  height="280"
+              /></a>
               <div class="name-price clearfix">
-                <span class="name">blue shirt</span>
+                <a href="#" class="name"><h3 class="title">blue shirt</h3></a>
+
                 <span class="price">$26</span>
               </div>
             </li>
             <li class="product-list-item">
-              <img
-                src="./img/product5.png"
-                alt="belt"
-                width="255"
-                height="280"
-              />
+              <a href="#" class="img-link"
+                ><img
+                  src="./img/product5.png"
+                  alt="belt"
+                  width="255"
+                  height="280"
+              /></a>
               <div class="name-price clearfix">
-                <span class="name">woman shrit</span>
+                <a href="#" class="name"><h3 class="title">woman shrit</h3></a>
+
                 <span class="price">$31</span>
               </div>
             </li>
             <li class="product-list-item">
-              <img
-                src="./img/product6.png"
-                alt="shoe"
-                width="255"
-                height="280"
-              />
+              <a href="#" class="img-link"
+                ><img
+                  src="./img/product6.png"
+                  alt="shoe"
+                  width="255"
+                  height="280"
+              /></a>
               <div class="name-price clearfix">
-                <span class="name">yellow tshirt</span>
+                <a href="#" class="name"
+                  ><h3 class="title">yellow tshirt</h3></a
+                >
+
                 <span class="price">$21</span>
               </div>
             </li>
             <li class="product-list-item">
-              <img
-                src="./img/product8.png"
-                alt="glasses"
-                width="255"
-                height="280"
-              />
+              <a href="#" class="img-link"
+                ><img
+                  src="./img/product8.png"
+                  alt="glasses"
+                  width="255"
+                  height="280"
+              /></a>
               <div class="name-price clearfix">
-                <span class="name">cool lingerie</span>
+                <a href="#" class="name"
+                  ><h3 class="title">cool lingerie</h3></a
+                >
+
                 <span class="price">$56</span>
               </div>
             </li>
