--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&family=Roboto:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <meta name="author" content="Ivan Fesenko" />
     <title>Homework-04</title>
