--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <header class="header clearfix">
         <div class="logo">
-          <h1 class="title"><span class="first-letter">m</span>art</h1>
+          <h1 class="title">mart</h1>
         </div>
         <nav class="menu">
           <ul class="main-menu">
