2nd section 5th work added

--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -37,7 +37,6 @@
     <main class="main-content">
       <section class="slider-section">
         <div class="slider">
-          <div class="container slider-menu"></div>
           <img
             src="./img/slide4.jpg"
             alt="friends"
@@ -45,13 +44,41 @@
             width="1648"
             height="600"
           />
+          <div class="wrapper">
+            <div class="container">
+              <div class="slider-menu clearfix">
+                <button type="button" class="btn btn-left">
+                  <img src="./img/slice-l.png" alt="slice" />
+                </button>
+                <button type="button" class="btn btn-right">
+                  <img src="./img/slice-r.png" alt="slice" />
+                </button>
+                <div class="title-text">
+                  <h2 class="title clearfix">AFFORDABLE PARIS TOURS</h2>
+                  <p class="text clearfix">
+                    CITY TOURS / TOUR TICKETS / TOUR GUIDES
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="collection">
         <div class="container">
           <h2 class="section-title">new collection</h2>
-          <ul class="collection-list">
+          <ul class="collection-list clearfix">
             <li class="collection-list-item">
+              <div class="collection-menu">
+                <div class="menu-like">
+                  <button class="coll-btn" type="button"></button>
+                  <button class="coll-btn" type="button"></button>
+                  <button class="coll-btn" type="button"></button>
+                </div>
+                <div class="menu-buy">
+                  <button class="buy-btn" type="button"></button>
+                </div>
+              </div>
               <img
                 src="./img/category-2.jpg"
                 alt="belt"
@@ -110,6 +137,14 @@
           </ul>
         </div>
       </section>
+      <footer class="footer">
+        <div class="container">
+          <p class="footer-text">
+            All Rights Reserved &copy; Dokan | Designed
+            <a href="#" class="link">ThemenGraph</a>
+          </p>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
