--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -69,14 +69,18 @@
           <h2 class="section-title">new collection</h2>
           <ul class="collection-list clearfix">
             <li class="collection-list-item">
-              <div class="collection-menu">
-                <div class="menu-like">
-                  <button class="coll-btn" type="button"></button>
-                  <button class="coll-btn" type="button"></button>
-                  <button class="coll-btn" type="button"></button>
-                </div>
-                <div class="menu-buy">
-                  <button class="buy-btn" type="button"></button>
+              <div class="collection-menu-wrapper">
+                <div class="collection-menu">
+                  <div class="menu-like">
+                    <button class="coll-btn like" type="button"></button>
+                    <button class="coll-btn arrows" type="button"></button>
+                    <button class="coll-btn clock" type="button"></button>
+                  </div>
+                  <div class="menu-buy">
+                    <button class="buy-btn" type="button">
+                      add to card
+                    </button>
+                  </div>
                 </div>
               </div>
               <img
@@ -93,6 +97,20 @@
               </div>
             </li>
             <li class="collection-list-item">
+              <div class="collection-menu-wrapper">
+                <div class="collection-menu">
+                  <div class="menu-like">
+                    <button class="coll-btn like" type="button"></button>
+                    <button class="coll-btn arrows" type="button"></button>
+                    <button class="coll-btn clock" type="button"></button>
+                  </div>
+                  <div class="menu-buy">
+                    <button class="buy-btn" type="button">
+                      add to card
+                    </button>
+                  </div>
+                </div>
+              </div>
               <img
                 src="./img/category-1.jpg"
                 alt="belt"
@@ -107,6 +125,20 @@
               </div>
             </li>
             <li class="collection-list-item">
+              <div class="collection-menu-wrapper">
+                <div class="collection-menu">
+                  <div class="menu-like">
+                    <button class="coll-btn like" type="button"></button>
+                    <button class="coll-btn arrows" type="button"></button>
+                    <button class="coll-btn clock" type="button"></button>
+                  </div>
+                  <div class="menu-buy">
+                    <button class="buy-btn" type="button">
+                      add to card
+                    </button>
+                  </div>
+                </div>
+              </div>
               <img
                 src="./img/category-4.jpg"
                 alt="belt"
@@ -121,6 +153,20 @@
               </div>
             </li>
             <li class="collection-list-item">
+              <div class="collection-menu-wrapper">
+                <div class="collection-menu">
+                  <div class="menu-like">
+                    <button class="coll-btn like" type="button"></button>
+                    <button class="coll-btn arrows" type="button"></button>
+                    <button class="coll-btn clock" type="button"></button>
+                  </div>
+                  <div class="menu-buy">
+                    <button class="buy-btn" type="button">
+                      add to card
+                    </button>
+                  </div>
+                </div>
+              </div>
               <img
                 src="./img/category-3.jpg"
                 alt="belt"
