module-06 html added

--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -42,12 +42,101 @@
             We work with <span class="title-span">amazing services</span>
           </h2>
           <ul class="service-list">
-            <li class="service-list-item"></li>
-            <li class="service-list-item"></li>
-            <li class="service-list-item"></li>
-            <li class="service-list-item"></li>
-            <li class="service-list-item"></li>
-            <li class="service-list-item"></li>
+            <li class="service-list-item">
+              <img
+                src="./img/s01.png"
+                alt="clock"
+                class="service-image"
+                width="32"
+                height="32"
+              />
+              <div class="service-name-text">
+                <h3 class="service-name">Photography</h3>
+                <p class="service-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor.
+                </p>
+              </div>
+            </li>
+            <li class="service-list-item">
+              <img
+                src="./img/s02.png"
+                alt="clock"
+                class="service-image"
+                width="32"
+                height="32"
+              />
+              <div class="service-name-text">
+                <h3 class="service-name">Web Design</h3>
+                <p class="service-text">
+                  Ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                  eiusmod tempor.
+                </p>
+              </div>
+            </li>
+            <li class="service-list-item">
+              <img
+                src="./img/s03.png"
+                alt="clock"
+                class="service-image"
+                width="32"
+                height="32"
+              />
+              <div class="service-name-text">
+                <h3 class="service-name">Creativity</h3>
+                <p class="service-text">
+                  Dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                  tempor.
+                </p>
+              </div>
+            </li>
+            <li class="service-list-item">
+              <img
+                src="./img/s04.png"
+                alt="clock"
+                class="service-image"
+                width="32"
+                height="32"
+              />
+              <div class="service-name-text">
+                <h3 class="service-name">seo</h3>
+                <p class="service-text">
+                  Ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                  eiusmod.
+                </p>
+              </div>
+            </li>
+            <li class="service-list-item">
+              <img
+                src="./img/s05.png"
+                alt="clock"
+                class="service-image"
+                width="32"
+                height="32"
+              />
+              <div class="service-name-text">
+                <h3 class="service-name">Css/Html</h3>
+                <p class="service-text">
+                  Lorem dolor sit amet, consectetur adipiscing elit, sed do
+                  tempor.
+                </p>
+              </div>
+            </li>
+            <li class="service-list-item">
+              <img
+                src="./img/s06.png"
+                alt="clock"
+                class="service-image"
+                width="32"
+                height="32"
+              />
+              <div class="service-name-text">
+                <h3 class="service-name">digital</h3>
+                <p class="service-text">
+                  Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                </p>
+              </div>
+            </li>
           </ul>
         </section>
         <section class="team">
@@ -60,6 +149,35 @@
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat.
           </p>
+          <ul class="team-list">
+            <li class="team-list-item">
+              <img
+                src="./img/Layer_16.jpg"
+                alt="matthew-dix"
+                class="member-photo"
+                width="380"
+                height="470"
+              />
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./img/Layer_19.jpg"
+                alt="michael-fertig"
+                class="member-photo"
+                width="380"
+                height="470"
+              />
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./img/Layer_18.jpg"
+                alt="christopher-campbell"
+                class="member-photo"
+                width="380"
+                height="470"
+              />
+            </li>
+          </ul>
         </section>
       </main>
       <footer class="footer">
