--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -1,230 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&family=Roboto:wght@300;400&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <meta name="author" content="Ivan Fesenko" />
-    <title>Homework-04</title>
-  </head>
-  <body>
-    <div class="container">
-      <header class="header clearfix">
-        <div class="logo">
-          <h1 class="title">mart</h1>
-        </div>
-        <nav class="menu">
-          <ul class="main-menu">
-            <li class="main-menu-item"><a href="#" class="link">home</a></li>
-            <li class="main-menu-item">
-              <a href="#" class="link">about us</a>
-            </li>
-            <li class="main-menu-item"><a href="#" class="link">page</a></li>
-            <li class="main-menu-item"><a href="#" class="link">shop</a></li>
-            <li class="main-menu-item"><a href="#" class="link">blog</a></li>
-            <li class="main-menu-item">
-              <a href="#" class="link">contact us</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <main class="main-content">
-        <section class="products">
-          <h2 class="section-title">feature products</h2>
-          <ul class="product-list clearfix">
-            <li class="product-list-item">
-              <a href="#" class="img-link"
-                ><img
-                  src="./img/product1.png"
-                  alt="shoe"
-                  width="255"
-                  height="280"
-              /></a>
-              <div class="name-price clearfix">
-                <a href="#" class="name"><h3 class="title">blue tshirt</h3></a>
 
-                <span class="price">$26</span>
-              </div>
-            </li>
-            <li class="product-list-item">
-              <a href="#" class="img-link"
-                ><img
-                  src="./img/product2.png"
-                  alt="belt"
-                  width="255"
-                  height="280"
-              /></a>
-              <div class="name-price clearfix">
-                <a href="#" class="name"><h3 class="title">woman shrit</h3></a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&family=Roboto:wght@300;400&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./css/normalize.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <meta name="author" content="Ivan Fesenko" />
+  <title>Homework-04</title>
+</head>
 
-                <span class="price">$31</span>
-              </div>
-            </li>
-            <li class="product-list-item">
-              <a href="#" class="img-link"
-                ><img
-                  src="./img/product9.png"
-                  alt="hat"
-                  width="255"
-                  height="280"
-              /></a>
-              <div class="name-price clearfix">
-                <a href="#" class="name"
-                  ><h3 class="title">yellow tshirt</h3></a
-                >
+<body>
+  <div class="container">
+    <header class="header clearfix">
+      <a href="#" class="logo">
+        <h1 class="title">mart</h1>
+      </a>
+      <nav class="menu">
+        <ul class="main-menu">
+          <li class="main-menu-item"><a href="#" class="link">home</a></li>
+          <li class="main-menu-item">
+            <a href="#" class="link">about us</a>
+          </li>
+          <li class="main-menu-item"><a href="#" class="link">page</a></li>
+          <li class="main-menu-item"><a href="#" class="link">shop</a></li>
+          <li class="main-menu-item"><a href="#" class="link">blog</a></li>
+          <li class="main-menu-item">
+            <a href="#" class="link">contact us</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-content">
+      <section class="products">
+        <h2 class="section-title">feature products</h2>
+        <ul class="product-list clearfix">
+          <li class="product-list-item">
+            <a href="#" class="img-link"><img src="./img/product1.png" alt="shoe" width="255" height="280" /></a>
+            <div class="name-price clearfix">
+              <a href="#" class="name">
+                <h3 class="title">blue tshirt</h3>
+              </a>
 
-                <span class="price">$21</span>
-              </div>
-            </li>
-            <li class="product-list-item">
-              <a href="#" class="img-link"
-                ><img
-                  src="./img/product4.png"
-                  alt="bag"
-                  width="255"
-                  height="280"
-              /></a>
-              <div class="name-price clearfix">
-                <a href="#" class="name"
-                  ><h3 class="title">cool lingerie</h3></a
-                >
+              <span class="price">$26</span>
+            </div>
+          </li>
+          <li class="product-list-item">
+            <a href="#" class="img-link"><img src="./img/product2.png" alt="belt" width="255" height="280" /></a>
+            <div class="name-price clearfix">
+              <a href="#" class="name">
+                <h3 class="title">woman shrit</h3>
+              </a>
 
-                <span class="price">$56</span>
-              </div>
-            </li>
-            <li class="product-list-item">
-              <a href="#" class="img-link"
-                ><img
-                  src="./img/product3.png"
-                  alt="bag"
-                  width="255"
-                  height="280"
-              /></a>
-              <div class="name-price clearfix">
-                <a href="#" class="name"><h3 class="title">blue shirt</h3></a>
+              <span class="price">$31</span>
+            </div>
+          </li>
+          <li class="product-list-item">
+            <a href="#" class="img-link"><img src="./img/product9.png" alt="hat" width="255" height="280" /></a>
+            <div class="name-price clearfix">
+              <a href="#" class="name">
+                <h3 class="title">yellow tshirt</h3>
+              </a>
 
-                <span class="price">$26</span>
-              </div>
-            </li>
-            <li class="product-list-item">
-              <a href="#" class="img-link"
-                ><img
-                  src="./img/product5.png"
-                  alt="belt"
-                  width="255"
-                  height="280"
-              /></a>
-              <div class="name-price clearfix">
-                <a href="#" class="name"><h3 class="title">woman shrit</h3></a>
+              <span class="price">$21</span>
+            </div>
+          </li>
+          <li class="product-list-item">
+            <a href="#" class="img-link"><img src="./img/product4.png" alt="bag" width="255" height="280" /></a>
+            <div class="name-price clearfix">
+              <a href="#" class="name">
+                <h3 class="title">cool lingerie</h3>
+              </a>
 
-                <span class="price">$31</span>
-              </div>
-            </li>
-            <li class="product-list-item">
-              <a href="#" class="img-link"
-                ><img
-                  src="./img/product6.png"
-                  alt="shoe"
-                  width="255"
-                  height="280"
-              /></a>
-              <div class="name-price clearfix">
-                <a href="#" class="name"
-                  ><h3 class="title">yellow tshirt</h3></a
-                >
+              <span class="price">$56</span>
+            </div>
+          </li>
+          <li class="product-list-item">
+            <a href="#" class="img-link"><img src="./img/product3.png" alt="bag" width="255" height="280" /></a>
+            <div class="name-price clearfix">
+              <a href="#" class="name">
+                <h3 class="title">blue shirt</h3>
+              </a>
 
-                <span class="price">$21</span>
-              </div>
-            </li>
-            <li class="product-list-item">
-              <a href="#" class="img-link"
-                ><img
-                  src="./img/product8.png"
-                  alt="glasses"
-                  width="255"
-                  height="280"
-              /></a>
-              <div class="name-price clearfix">
-                <a href="#" class="name"
-                  ><h3 class="title">cool lingerie</h3></a
-                >
+              <span class="price">$26</span>
+            </div>
+          </li>
+          <li class="product-list-item">
+            <a href="#" class="img-link"><img src="./img/product5.png" alt="belt" width="255" height="280" /></a>
+            <div class="name-price clearfix">
+              <a href="#" class="name">
+                <h3 class="title">woman shrit</h3>
+              </a>
 
-                <span class="price">$56</span>
-              </div>
-            </li>
-          </ul>
-        </section>
-        <section class="news">
-          <h2 class="section-title">lates news</h2>
-          <ul class="news-list clearfix">
-            <li class="news-list-item">
-              <article class="article">
-                <img
-                  src="./img/ipad-632394_960_720.jpg"
-                  alt="ipad-map"
-                  width="350"
-                  height="260"
-                />
-                <h3 class="news-title">
-                  Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean
-                </h3>
-                <p class="news-text">
-                  Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet
-                  nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum
-                  velit. Nam nec tellus a odio tincidunt
-                </p>
-                <a href="#" class="btn">Read More</a>
-              </article>
-            </li>
-            <li class="news-list-item">
-              <article class="article">
-                <img
-                  src="./img/slide1.jpg"
-                  alt="ipad-map"
-                  width="350"
-                  height="260"
-                />
-                <h3 class="news-title">
-                  Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean
-                </h3>
-                <p class="news-text">
-                  Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet
-                  nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum
-                  velit. Nam nec tellus a odio tincidunt
-                </p>
-                <a href="#" class="btn">Read More</a>
-              </article>
-            </li>
-            <li class="news-list-item">
-              <article class="article">
-                <img
-                  src="./img/bus-img.jpg"
-                  alt="ipad-map"
-                  width="350"
-                  height="260"
-                />
-                <h3 class="news-title">
-                  Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean
-                </h3>
-                <p class="news-text">
-                  Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet
-                  nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum
-                  velit. Nam nec tellus a odio tincidunt
-                </p>
-                <a href="#" class="btn">Read More</a>
-              </article>
-            </li>
-          </ul>
-        </section>
-      </main>
-    </div>
-  </body>
+              <span class="price">$31</span>
+            </div>
+          </li>
+          <li class="product-list-item">
+            <a href="#" class="img-link"><img src="./img/product6.png" alt="shoe" width="255" height="280" /></a>
+            <div class="name-price clearfix">
+              <a href="#" class="name">
+                <h3 class="title">yellow tshirt</h3>
+              </a>
+
+              <span class="price">$21</span>
+            </div>
+          </li>
+          <li class="product-list-item">
+            <a href="#" class="img-link"><img src="./img/product8.png" alt="glasses" width="255" height="280" /></a>
+            <div class="name-price clearfix">
+              <a href="#" class="name">
+                <h3 class="title">cool lingerie</h3>
+              </a>
+
+              <span class="price">$56</span>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section class="news">
+        <h2 class="section-title">lates news</h2>
+        <ul class="news-list clearfix">
+          <li class="news-list-item">
+            <article class="article">
+              <img src="./img/ipad-632394_960_720.jpg" alt="ipad-map" width="350" height="260" />
+              <h3 class="news-title">
+                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                Aenean
+              </h3>
+              <p class="news-text">
+                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet
+                nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum
+                velit. Nam nec tellus a odio tincidunt
+              </p>
+              <a href="#" class="btn">Read More</a>
+            </article>
+          </li>
+          <li class="news-list-item">
+            <article class="article">
+              <img src="./img/slide1.jpg" alt="ipad-map" width="350" height="260" />
+              <h3 class="news-title">
+                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                Aenean
+              </h3>
+              <p class="news-text">
+                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet
+                nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum
+                velit. Nam nec tellus a odio tincidunt
+              </p>
+              <a href="#" class="btn">Read More</a>
+            </article>
+          </li>
+          <li class="news-list-item">
+            <article class="article">
+              <img src="./img/bus-img.jpg" alt="ipad-map" width="350" height="260" />
+              <h3 class="news-title">
+                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                Aenean
+              </h3>
+              <p class="news-text">
+                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet
+                nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum
+                velit. Nam nec tellus a odio tincidunt
+              </p>
+              <a href="#" class="btn">Read More</a>
+            </article>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </div>
+</body>
+
 </html>
