--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&family=Roboto:wght@300;400&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&family=Roboto:wght@300;400;900&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="./css/normalize.css" />
   <link rel="stylesheet" href="./css/style.css" />
@@ -41,79 +41,72 @@
           <li class="product-list-item">
             <a href="#" class="img-link"><img src="./img/product1.png" alt="shoe" width="255" height="280" /></a>
             <div class="name-price clearfix">
-              <a href="#" class="name">
-                <h3 class="title">blue tshirt</h3>
-              </a>
-
+              <h3 class="title">
+                <a href="#" class="name">blue tshirt</a>
+              </h3>
               <span class="price">$26</span>
             </div>
           </li>
           <li class="product-list-item">
             <a href="#" class="img-link"><img src="./img/product2.png" alt="belt" width="255" height="280" /></a>
             <div class="name-price clearfix">
-              <a href="#" class="name">
-                <h3 class="title">woman shrit</h3>
-              </a>
-
+              <h3 class="title">
+                <a href="#" class="name">woman shrit</a>
+              </h3>
               <span class="price">$31</span>
             </div>
           </li>
           <li class="product-list-item">
             <a href="#" class="img-link"><img src="./img/product9.png" alt="hat" width="255" height="280" /></a>
             <div class="name-price clearfix">
-              <a href="#" class="name">
-                <h3 class="title">yellow tshirt</h3>
-              </a>
-
+              <h3 class="title">
+                <a href="#" class="name">yellow tshirt</a>
+              </h3>
               <span class="price">$21</span>
             </div>
           </li>
           <li class="product-list-item">
             <a href="#" class="img-link"><img src="./img/product4.png" alt="bag" width="255" height="280" /></a>
             <div class="name-price clearfix">
-              <a href="#" class="name">
-                <h3 class="title">cool lingerie</h3>
-              </a>
-
+              <h3 class="title">
+                <a href="#" class="name">cool lingerie</a>
+              </h3>
               <span class="price">$56</span>
             </div>
           </li>
           <li class="product-list-item">
             <a href="#" class="img-link"><img src="./img/product3.png" alt="bag" width="255" height="280" /></a>
             <div class="name-price clearfix">
-              <a href="#" class="name">
-                <h3 class="title">blue shirt</h3>
-              </a>
-
+              <h3 class="title">
+                <a href="#" class="name">blue shirt</a>
+              </h3>
               <span class="price">$26</span>
             </div>
           </li>
           <li class="product-list-item">
             <a href="#" class="img-link"><img src="./img/product5.png" alt="belt" width="255" height="280" /></a>
             <div class="name-price clearfix">
-              <a href="#" class="name">
-                <h3 class="title">woman shrit</h3>
-              </a>
-
+              <h3 class="title">
+                <a href="#" class="name">woman shrit</a>
+              </h3>
               <span class="price">$31</span>
             </div>
           </li>
           <li class="product-list-item">
             <a href="#" class="img-link"><img src="./img/product6.png" alt="shoe" width="255" height="280" /></a>
             <div class="name-price clearfix">
-              <a href="#" class="name">
-                <h3 class="title">yellow tshirt</h3>
-              </a>
-
+              <h3 class="title">
+                <a href="#" class="name">yellow tshirt</a>
+              </h3>
               <span class="price">$21</span>
             </div>
           </li>
           <li class="product-list-item">
             <a href="#" class="img-link"><img src="./img/product8.png" alt="glasses" width="255" height="280" /></a>
             <div class="name-price clearfix">
-              <a href="#" class="name">
-                <h3 class="title">cool lingerie</h3>
-              </a>
+
+              <h3 class="title"><a href="#" class="name">cool lingerie</a></h3>
+
 
               <span class="price">$56</span>
             </div>
@@ -121,7 +114,7 @@
         </ul>
       </section>
       <section class="news">
-        <h2 class="section-title">lates news</h2>
+        <h2 class="section-title">latest news</h2>
         <ul class="news-list clearfix">
           <li class="news-list-item">
             <article class="article">
