--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -39,7 +39,7 @@
       <main class="main-content">
         <section class="services">
           <h2 class="title">
-            We work with <span class="title-span">amazing services</span>
+            <span class="title-span">We work with</span>amazing services
           </h2>
           <ul class="service-list">
             <li class="service-list-item">
@@ -141,7 +141,7 @@
         </section>
         <section class="team">
           <h2 class="title">
-            Who we are <span class="title-span">meet our team</span>
+            <span class="title-span">Who we are</span> meet our team
           </h2>
           <p class="team-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
